--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -7,8 +6,23 @@ body
     margin: 0;
     padding: 0;
 }
-#container
-{
+
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container {
     width: 70%;
     padding: 1em;
     text-align: left;
@@ -16,7 +30,6 @@ body
     margin: 0 auto;
 }
 
-#container h1
-{
+#container h1 {
     font-size: 20px;
 }
