--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,7 @@
-body {
-    color: #DDD;
+body
+{
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -7,9 +9,10 @@ body {
     padding: 0;
 }
 
-#cabecera {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+#cabecera
+{
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -22,31 +25,38 @@ body {
     vertical-align: middle;
 }
 
-#cabecera #tagline {
+#cabecera #tagline
+{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
 
-#container {
+#container
+{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
 
-#container h1 {
+#container h1
+{
     font-size: 20px;
 }
-
-#post {
+#post
+{
+    background: white;
     padding: 1em;
 }
 
-#footer {
-    background: #777;
+#footer
+{
+    background: #37488b;
     color: white;
     text-align: center;
     padding: 0.5em;
 }
+
+
